--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,11 +24,25 @@ body {
   position: absolute;
 }
 
-/* Slider.css */
-.mySwiper .swiper-button-next, .mySwiper
-.swiper-button-prev {
-  color: black;
+ .swiper-button-next {
   background: #f3f3f3;
+  background-image: url(/images/arrow.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
+  padding: 20px;
+  border-radius: 50%; /* Pentru a face butoanele rotunde */
+  border: 3.5px solid #dddddd;
+  top: 50%;
+  transform: translateY(-50%); /* Folosim translateY pentru a centra butoanele vertical */
+  margin-top: 0; /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
+}
+.swiper-button-prev{
+  background: #f3f3f3;
+  background-image: url(/images/arrow.png);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center;
   padding: 20px;
   border-radius: 50%; /* Pentru a face butoanele rotunde */
   border: 3.5px solid #dddddd;
@@ -37,8 +51,16 @@ body {
   margin-top: 0; /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
 }
 
+.swiper-button-next::after {
+  display: none;
+}
+
+.swiper-button-prev::after {
+  display: none;
+}
+
 .swiper-button-next {
-  transform: translateX(-370%); /* Mușcăm butonul "next" la stânga pentru a lăsa spațiu între ele */
+  transform: translateX(-270%); /* Mușcăm butonul "next" la stânga pentru a lăsa spațiu între ele */
 }
 
 .swiper-button-prev {
