--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,11 +31,15 @@ body {
   background-size: 60%;
   background-position: center;
   padding: 20px;
-  border-radius: 50%; /* Pentru a face butoanele rotunde */
+  border-radius: 50%;
+  /* Pentru a face butoanele rotunde */
   border: 3.5px solid #dddddd;
-  transform: translateY(-50%); /* Folosim translateY pentru a centra butoanele vertical */
-  margin-top: 0; /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
+  transform: translateY(-50%);
+  /* Folosim translateY pentru a centra butoanele vertical */
+  margin-top: 0;
+  /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
 }
+
 .swiper-button-prev {
   background: #f3f3f3;
   background-image: url(/images/prev.png);
@@ -43,10 +47,13 @@ body {
   background-size: 200%;
   background-position: center;
   padding: 20px;
-  border-radius: 50%; /* Pentru a face butoanele rotunde */
+  border-radius: 50%;
+  /* Pentru a face butoanele rotunde */
   border: 3.5px solid #dddddd;
-  transform: translateY(-50%); /* Folosim translateY pentru a centra butoanele vertical */
-  margin-top: 0; /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
+  transform: translateY(-50%);
+  /* Folosim translateY pentru a centra butoanele vertical */
+  margin-top: 0;
+  /* Eliminăm marginul de sus pentru a păstra butoanele la aceeași înălțime */
 }
 
 .swiper-button-next::after {
@@ -58,11 +65,13 @@ body {
 }
 
 .swiper-button-next {
-  transform: translateX(-270%); /* Mușcăm butonul "next" la stânga pentru a lăsa spațiu între ele */
+  transform: translateX(-270%);
+  /* Mușcăm butonul "next" la stânga pentru a lăsa spațiu între ele */
 }
 
 .swiper-button-prev {
-  transform: translateX(270%); /* Mușcăm butonul "prev" la dreapta pentru a lăsa spațiu între ele */
+  transform: translateX(270%);
+  /* Mușcăm butonul "prev" la dreapta pentru a lăsa spațiu între ele */
 }
 
 .mySwiper .swiper-pagination-bullet {
@@ -73,12 +82,14 @@ body {
 }
 
 @media (max-width: 768px) {
+
   .swiper-button-next,
   .swiper-button-prev {
     background-image: none;
     background: none;
     border: none;
   }
+
   .mySwiper .swiper-pagination-bullet {
     width: 7px;
     height: 7px;
@@ -86,6 +97,7 @@ body {
 }
 
 @media (max-width: 1024px) {
+
   .swiper-button-next,
   .swiper-button-prev {
     transform: translateX(0);
@@ -131,29 +143,29 @@ body {
   width: 75%;
 }
 
-#checkbox:checked + .toggle .bars {
+#checkbox:checked+.toggle .bars {
   position: absolute;
   transition-duration: 0.5s;
 }
 
-#checkbox:checked + .toggle #bar2 {
+#checkbox:checked+.toggle #bar2 {
   transform: scaleX(0);
   transition-duration: 0.1s;
 }
 
-#checkbox:checked + .toggle #bar1 {
+#checkbox:checked+.toggle #bar1 {
   width: 100%;
   transform: rotate(45deg);
   transition-duration: 0.5s;
 }
 
-#checkbox:checked + .toggle #bar3 {
+#checkbox:checked+.toggle #bar3 {
   width: 100%;
   transform: rotate(-45deg);
   transition-duration: 0.5s;
 }
 
-#checkbox:checked + .toggle {
+#checkbox:checked+.toggle {
   transition-duration: 0.5s;
   transform: rotate(180deg);
 }
@@ -179,4 +191,39 @@ body {
 
 .mobile-menu.active {
   transform: translateY(100%);
+}
+
+.dropdown-content {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  justify-items: left;
+  padding: 2vh 0;
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
 }
