--- a/styles/globals.css
+++ b/styles/globals.css
@@ -213,12 +213,12 @@ body {
   color: black;
   text-decoration: none;
   padding: 1vh 0;
-
+  padding-left: 1.5vw;
+  padding-right: 1.3vw;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
-
 }
 
 .dropdown:hover .dropdown-content {
