--- a/styles/globals.css
+++ b/styles/globals.css
@@ -204,24 +204,396 @@ body {
   transition: opacity 0.15s linear, transform 0.15s linear;
   display: flex;
   flex-direction: column;
-  width: 15vw;
+  width: 20vw;
   justify-items: left;
   padding: 2vh 0;
+}
+
+.carti-de-vizita {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.tiparituri {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.brosuri-carti-cataloage {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.carnete {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.etichete-autocolante {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.stickere {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.foto-printing {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.shopping-bags {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.pos-materiale {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
+}
+
+.design-grafic {
+  position: absolute;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 5;
+  opacity: 0;
+  transform: scale(0);
+  transform-origin: top left;
+  transition: opacity 0.15s linear, transform 0.15s linear;
+  display: flex;
+  flex-direction: column;
+  width: 22.5vw;
+  justify-items: left;
+  padding: 2vh 0;
+  left: 20vw;
 }
 
 .dropdown-content a {
   color: black;
   text-decoration: none;
   padding: 1vh 0;
-  padding-left: 1.5vw;
-  padding-right: 1.3vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  width: 100%;
+  text-align: left;
+}
+
+.carti-de-vizita a {
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.tiparituri a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.brosuri-carti-cataloage a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.carnete a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.etichete-autocolante a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.stickere a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.foto-printing a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.shopping-bags a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.pos-materiale a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
+}
+
+.design-grafic a{
+  color: black;
+  text-decoration: none;
+  padding: 1vh 0;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 .dropdown-content a:hover {
   background-color: #ddd;
 }
 
+.carti-de-vizita a:hover {
+  background-color: #ddd;
+}
+
+.tiparituri a:hover {
+  background-color: #ddd;
+}
+
+.brosuri-carti-cataloage a:hover {
+  background-color: #ddd;
+}
+
+.carnete a:hover {
+  background-color: #ddd;
+}
+
+.etichete-autocolante a:hover {
+  background-color: #ddd;
+}
+
+.stickere a:hover {
+  background-color: #ddd;
+}
+
+.foto-printing a:hover {
+  background-color: #ddd;
+}
+
+.shopping-bags a:hover {
+  background-color: #ddd;
+}
+
+.pos-materiale a:hover {
+  background-color: #ddd;
+}
+
+.design-grafic a:hover {
+  background-color: #ddd;
+}
+
 .dropdown:hover .dropdown-content {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(1):hover ~ .carti-de-vizita,
+  .carti-de-vizita:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(3):hover ~ .tiparituri,
+  .tiparituri:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(5):hover ~ .brosuri-carti-cataloage,
+  .brosuri-carti-cataloage:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(7):hover ~ .carnete,
+  .carnete:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(9):hover ~ .etichete-autocolante,
+  .etichete-autocolante:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(11):hover ~ .stickere,
+  .stickere:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(13):hover ~ .foto-printing,
+  .foto-printing:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(15):hover ~ .shopping-bags,
+  .shopping-bags:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(17):hover ~ .pos-materiale,
+  .pos-materiale:hover {
+  display: flex;
+  flex-direction: column;
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-content a:nth-child(19):hover ~ .design-grafic,
+  .design-grafic:hover {
   display: flex;
   flex-direction: column;
   opacity: 1;
